--- a/manifest.yml
+++ b/manifest.yml
@@ -1,13 +1,12 @@
----
 applications:
-- name: mean
-  host: mean-${random-word}
-  memory: 256M
+- path: .
+  memory: 512M
+  instances: 1
+  domain: stage1.mybluemix.net
+  name: nodejs-mean
+  host: nodejs-mean
+  disk_quota: 1024M
   services:
-  - mean-mongo
-  env:
-    NODE_ENV: cloud-foundry
-declared-services:
-  mean-mongo:
-    label: mongodb
-    plan: 100
+  - nodejs-mean-mongodb
+  - availability-monitoring-auto
+  - Auto-Scaling-x5
