--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "express-validator": "^2.18.0",
     "mongoose": "^4.2.6",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "bluemix-autoscaling-agent": "*"
   },
   "devDependencies": {}
 }
